third_party/move/move-compiler-v2/tests/reference-safety/freeze_aliasing.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/reference-safety/freeze_aliasing.move:8:15
  │
8 │         *r = 4;
  │               ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/reference-safety/freeze_aliasing.move:22:38
   │
22 │         *vector::borrow_mut(r, i) = 4;
   │                                      ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/reference-safety/freeze_aliasing.move:31:58
   │
31 │         *vector::borrow_mut(r, *vector::borrow(r, 1)) = 4;
   │                                                          ^


Diagnostics:
error: cannot freeze local `y`  since multiple mutable references exist
  ┌─ tests/reference-safety/freeze_aliasing.move:7:18
  │
5 │         let r = &mut x;
  │                 ------ conflicting mutable local borrow
6 │         let y = &mut x;
  │                 ------ originating mutable local borrow
7 │         let _z = freeze(y);
  │                  ^^^^^^^^^ frozen here

error: cannot implicitly freeze local `r` since other mutable usages for this reference exist
   ┌─ tests/reference-safety/freeze_aliasing.move:31:48
   │
31 │         *vector::borrow_mut(r, *vector::borrow(r, 1)) = 4;
   │          --------------------------------------^-----
   │          │                                     │
   │          │                                     implicitly frozen here
   │          used here
